syntax = "proto3";

option go_package = "github.com/ofey404/experiments/microservices/go-zero/shared-proto/greeter2/greeter2";

package greeter2;

import "common.proto";

// The greeting service definition.
service Greeter2 {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {}
}

message HelloRequest {
  string name = 1;
  common.GreetType greeting = 2;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}
